--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/desktop-vector3.png);
+    background-image: url(Images/desktop-vector3-min.png);
     background-size: cover;
     background-position: center;
     
