--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
 }
 #header{
     width: 100%;
-    height: 100vh;
-    background-image: url(Images/desktop-vector3-min.png);
+    height: 90vh;
+    background-image: url(Images/desktop-vector.png);
     background-size: cover;
     background-position: center;
     
@@ -355,13 +355,13 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(Images/desktop-vector4-min.png);
+        background-image: url(Images/desktop-vector2.png);
     }
     .logo{
         width: 132px;
     }
     .header-text{
-        margin-top: 42%;
+        margin-top: 22%;
         font-size: 16px;
     }
     .header-text h1{
